--- a/about.html
+++ b/about.html
@@ -248,7 +248,7 @@
             <div class="item">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h2 class="text-white title-year d-none d-lg-block">
+                    <h2 class="text-white title-year d-none d-lg-block my-lg-3">
                       2011
                     </h2>
                     <h1 class="text-white title-year d-lg-none">
@@ -276,7 +276,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-3">
-                  <h2 class="text-white title-year d-none d-lg-block">
+                  <h2 class="text-white title-year d-none d-lg-block my-lg-3">
                     2011
                   </h2>
                   <h1 class="text-white title-year d-lg-none">
@@ -304,7 +304,7 @@
           <div class="item">
             <div class="row">
               <div class="col-lg-3">
-                <h2 class="text-white title-year d-none d-lg-block">
+                <h2 class="text-white title-year d-none d-lg-block my-lg-3">
                   2011
                 </h2>
                 <h1 class="text-white title-year d-lg-none">
