--- a/business-logistic.html
+++ b/business-logistic.html
@@ -337,6 +337,9 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-12">
+          <img class="guy move-right" src="images/business-logistic-guy-02.png" alt="">
+        </div>
       </div>
     </div>
     <div class="container-fluid footer-content">
