--- a/businesses.html
+++ b/businesses.html
@@ -212,7 +212,7 @@
             PT Ansaf<br>
             Inti Resources
           </h3>
-          <p class="text-white d-none d-lg-block">
+          <p class="text-white d-lg-none">
             PT Ansaf Inti Resources (AIR) merupakan<br>
             perusahaan yang bergerak dibidang<br>
             pertambangan yang beroperasi di provinsi<br>
@@ -230,8 +230,13 @@
              Ansaf Mining, Ansaf Services, Ansaf Logistic,<br>
              Ansaf Trading dan Ansaf Rent.
           </p>
-          <h6 class="text-white d-lg-none">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan. Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining, Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
+          <h6 class="text-white d-lg-block">
+            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
+            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
+            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
+            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara<br>
+            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,<br>
+            Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
           </h6>
         </div>
       </div>
