--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
             <div class="row">
                 <div class="col-lg-2 ml-lg-5">
                   <a href="index.html">
-                    <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
+                    <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
+                    <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
                   </a>
                 </div>
                 <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
