--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
                             <div class="title">
-                                <h6 class="text-white">
+                                <h6 class="text-white subtitle">
                                     ANSAF SERVICES
                                 </h6>
                                 <h6 class="d-lg-none slide-number">
@@ -530,7 +530,7 @@
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
                             <div class="title">
-                                <h6 class="text-white">
+                                <h6 class="text-white subtitle">
                                     ANSAF LOGISTIC
                                 </h6>
                                 <h6 class="d-lg-none slide-number">
