--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                 <div class="details">
                     <div class="content-wrapper d-flex">
                         <div class="inline-block">
-                            <img class="" src="images/line-gray-11.png" alt="">
+                            <img class="mt-4 pt-3" src="images/line-gray-11.png" alt="">
                         </div>
                         <div class="inline-block pl-2">
                             <h6 class="text-orange">
