--- a/vision-mission.html
+++ b/vision-mission.html
@@ -216,10 +216,16 @@
                 <h3 class="text-white mb-lg-4">
                   Visi
                 </h3>
-                <p class="text-white font-titillium-italic">
+                <p class="text-white font-titillium-italic d-none d-lg-block">
                   Menjadi perusahaan tambang terintegrasi yang memiliki<br>
                   integritas, produktivitas, terpercaya, dengan pengelolaan K3LH<br>
                   yang baik, serta mampu berkembang secara berkesinambungan
+                </p>
+                <p class="text-white font-titillium-italic d-lg-none">
+                  Menjadi perusahaan tambang terintegrasi yang<br>
+                  memiliki integritas, produktivitas, terpercaya,<br>
+                  dengan pengelolaan K3LH yang baik, serta mampu<br>
+                  berkembang secara berkesinambungan.
                 </p>
             </div>
           </div>
