--- a/bod.html
+++ b/bod.html
@@ -230,7 +230,7 @@
             </h4>
           </div>
         </div>
-        <div class="col-lg-12 d-lg-none pr-0">
+        <div class="col-lg-12 d-lg-none px-0">
           <div class="carousel-bod owl-theme">
             <div class="item">
               <h4 class="text-white text-center mb-4">
