--- a/businesses.html
+++ b/businesses.html
@@ -231,7 +231,7 @@
              Ansaf Mining, Ansaf Services, Ansaf Logistic,<br>
              Ansaf Trading dan Ansaf Rent.
           </p>
-          <h6 class="text-white d-lg-block">
+          <h6 class="text-white d-lg-block d-none">
             PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
             Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
             trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
