--- a/business-services.html
+++ b/business-services.html
@@ -288,11 +288,18 @@
               <h4 class="text-white">
                 Overburden Removal 
               </h4>
-              <p class="text-white">
+              <p class="text-white d-none d-lg-block">
                 Pengelolaan dalam pemindahan tanah penutup<br>
                 dikerjakan mengikuti perencanaan yang matang<br>
                 untuk menciptakan penambangan yang ramah<br>
                 lingkungan.
+              </p>
+              <p class="text-white d-lg-none">
+                Pengelolaan dalam pemindahan tanah<br>
+                penutup dikerjakan mengikuti<br>
+                perencanaan yang matang untuk<br>
+                menciptakan penambangan yang<br>
+                ramah lingkungan.
               </p>
             </div>
           </div>
@@ -306,10 +313,15 @@
               <h4 class="text-white">
                 Coal Hauling  
               </h4>
-              <p class="text-white">
+              <p class="text-white d-none d-lg-block">
                 Pengangkutan dilakukan secara efisien agar dapat<br>
                 menyediakan batubara sesuai target yang<br>
                 dibutuhkan.
+              </p>
+              <p class="text-white d-lg-none">
+                Pengangkutan dilakukan secara efisien<br>
+                agar dapat menyediakan batubara sesuai<br>
+                target yang dibutuhkan.
               </p>
             </div>
           </div>
@@ -325,11 +337,18 @@
               <h4 class="text-white">
                 Overburden Removal 
               </h4>
-              <p class="text-white">
+              <p class="text-white d-none d-lg-block">
                 Pengelolaan dalam pemindahan tanah penutup<br>
                 dikerjakan mengikuti perencanaan yang matang<br>
                 untuk menciptakan penambangan yang ramah<br>
                 lingkungan.
+              </p>
+              <p class="text-white d-lg-none">
+                Pengelolaan dalam pemindahan tanah<br>
+                penutup dikerjakan mengikuti<br>
+                perencanaan yang matang untuk<br>
+                menciptakan penambangan yang<br>
+                ramah lingkungan.
               </p>
             </div>
           </div>
@@ -343,10 +362,15 @@
               <h4 class="text-white">
                 Coal Hauling  
               </h4>
-              <p class="text-white">
+              <p class="text-white d-none d-lg-block">
                 Pengangkutan dilakukan secara efisien agar dapat<br>
                 menyediakan batubara sesuai target yang<br>
                 dibutuhkan.
+              </p>
+              <p class="text-white d-lg-none">
+                Pengangkutan dilakukan secara efisien<br>
+                agar dapat menyediakan batubara sesuai<br>
+                target yang dibutuhkan.
               </p>
             </div>
           </div>
