--- a/businesses.html
+++ b/businesses.html
@@ -251,12 +251,20 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Mining
                 </h2>
-                <p class="text-gray font-roboto mb-lg-3 mb-5">
+                <p class="text-gray font-roboto mb-lg-3 mb-5 d-none d-lg-block">
                   Seiring dengan pengalaman dalam bidang Usaha<br>
                   Jasa Penambangan batubara maka PT. Ansaf Inti<br>
                   Resources mulai melakukan pengembangan usaha<br>
                   untuk mengelola IUP di Embalut dan Batuah dan<br>
                   melakukan diversifikasi usaha ke bidang lain...
+                </p>
+                <p class="text-gray font-roboto mb-lg-3 mb-5 d-lg-none">
+                  Seiring dengan pengalaman dalam bidang<br>
+                  Usaha Jasa Penambangan batubara maka PT.<br>
+                  Ansaf Inti Resources mulai melakukan<br>
+                  pengembangan usaha untuk mengelola IUP di<br>
+                  Embalut dan Batuah dan melakukan<br>
+                  diversifikasi usaha ke bidang lain...
                 </p>
                 <a href="business-mining.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
@@ -279,11 +287,19 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Services
                 </h2>
-                <p class="text-gray font-roboto mb-lg-3 mb-5">
+                <p class="text-gray font-roboto mb-lg-3 mb-5 d-none d-lg-block">
                   Semenjak berdirinya di tahun 2014 sebagai perusahaan<br>
                   penyedia jasa pertambangan, Ansaf telah melayani<br>
                   serangkaian layanan kontrak pertambangan diberbagai<br>
                   perusahaan. Kita menangani perencanaan tambang,<br>
+                  pengangkutan lapisan tanah penutup...
+                </p>
+                <p class="text-gray font-roboto mb-lg-3 mb-5 d-lg-none">
+                  Semenjak berdirinya di tahun 2014 sebagai<br>
+                  perusahaan penyedia jasa pertambangan,<br>
+                  Ansaf telah melayani serangkaian layanan<br>
+                  kontrak pertambangan diberbagai perusahaan.<br>
+                  Kita menangani perencanaan tambang,<br>
                   pengangkutan lapisan tanah penutup...
                 </p>
                 <a href="business-services.html" class="link-gray-border my-lg-3 d-inline-block">
@@ -301,12 +317,20 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Logistic
                 </h2>
-                <p class="text-gray font-roboto  mb-lg-3 mb-5">
+                <p class="text-gray font-roboto  mb-lg-3 mb-5 d-none d-lg-block">
                   Sejak tahun 2018, PT Ansaf Inti Resources berupaya<br>
                   melakukan diversifikasi usaha dengan menjajaki<br>
                   usaha dibidang support logistik bagi kegiatan coal<br>
                   barging. Saat ini terdapat 2 perusahaan yang<br>
                   bergerak dibidang support coal barging...
+                </p>
+                <p class="text-gray font-roboto  mb-lg-3 mb-5 d-lg-none">
+                  Sejak tahun 2018, PT Ansaf Inti Resources<br>
+                  berupaya melakukan diversifikasi usaha dengan<br>
+                  menjajaki usaha dibidang support logistik bagi<br>
+                  kegiatan coal barging. Saat ini terdapat 2<br>
+                  perusahaan yang bergerak dibidang support<br>
+                  coal barging...
                 </p>
                 <a href="business-logistic.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
