--- a/contact.html
+++ b/contact.html
@@ -219,9 +219,9 @@
                       Masih Memiliki Pertanyaan?
                     </h2>
                     <p class="text-white font-roboto d-none d-lg-block">
-                      Kami akan senang hati mendengar pertanyaan Anda dan<br>
-                      berusaha untuk memberikan informasinya. Silakan<br>
-                      mengirimkannya melalui form di bawah ini.
+                      Kami akan senang hati mendengar pertanyaan Anda<br>
+                      dan berusaha untuk memberikan informasinya.<br>
+                      Silakan mengirimkannya melalui form di bawah ini.
                     </p>
                     <p class="text-white font-roboto d-lg-none">
                       Kami akan senang hati mendengar pertanyaan<br>
