--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-9 pr-0 py-lg-0 py-5">
+            <div class="col-lg-9 pr-0 py-lg-0 py-5 px-lg-0 px-0">
                 <img class="white-shadow-right d-none d-lg-block" src="images/white-shadow-right-09.png" alt="">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
