--- a/about.html
+++ b/about.html
@@ -257,18 +257,10 @@
                     </h1>
                   </div>
                   <div class="col-lg-9">
-                    <p class="text-white d-none d-lg-block">
-                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
-                      jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
-                      justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                      penambangan batubara.
-                    </p>
-                    <p class="text-white d-lg-none">
-                      Tahun 2011 Ansaf mulai masuk ke sektor<br>
-                       pertambangan melalui proses jual beli batubara<br>
-                      (coal trading).  Serangkaian sandungan dalam<br>
-                      proses ini justru mendorong Pendiri untuk<br>
-                      masuk ke kegiatan langsung dalam<br>
+                    <p class="text-white details">
+                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
+                      jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
+                      justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
                       penambangan batubara.
                     </p>
                   </div>
@@ -285,18 +277,10 @@
                   </h1>
                 </div>
                 <div class="col-lg-9">
-                  <p class="text-white d-none d-lg-block">
-                    Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
-                    jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
-                    justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                    penambangan batubara.
-                  </p>
-                  <p class="text-white d-lg-none">
-                    Tahun 2011 Ansaf mulai masuk ke sektor<br>
-                     pertambangan melalui proses jual beli batubara<br>
-                    (coal trading).  Serangkaian sandungan dalam<br>
-                    proses ini justru mendorong Pendiri untuk<br>
-                    masuk ke kegiatan langsung dalam<br>
+                  <p class="text-white details">
+                    Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
+                    jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
+                    justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
                     penambangan batubara.
                   </p>
                 </div>
@@ -313,18 +297,10 @@
                 </h1>
               </div>
               <div class="col-lg-9">
-                <p class="text-white d-none d-lg-block">
-                  Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
-                  jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
-                  justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                  penambangan batubara.
-                </p>
-                <p class="text-white d-lg-none">
-                  Tahun 2011 Ansaf mulai masuk ke sektor<br>
-                   pertambangan melalui proses jual beli batubara<br>
-                  (coal trading).  Serangkaian sandungan dalam<br>
-                  proses ini justru mendorong Pendiri untuk<br>
-                  masuk ke kegiatan langsung dalam<br>
+                <p class="text-white details">
+                  Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
+                  jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
+                  justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
                   penambangan batubara.
                 </p>
               </div>
