--- a/prev-projects.html
+++ b/prev-projects.html
@@ -215,9 +215,9 @@
           <h2 class="text-orange font-50">
             “
           </h2>
-          <p class="text-white">
-            Semenjak berdirinya ditahun 2014, PT Ansaf telah dipercaya<br>
-            untuk melakukan pekerjaan penambangan dan pengembangan<br>
+          <p class="text-white brief">
+            Semenjak berdirinya ditahun 2014, PT Ansaf telah dipercaya
+            untuk melakukan pekerjaan penambangan dan pengembangan
             infrastruktur di beberapa perusahaan di Kalimantan Timur
           </p>
         </div>
@@ -259,8 +259,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -268,8 +269,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -287,8 +289,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -296,8 +299,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -315,8 +319,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -324,8 +329,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -343,8 +349,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -352,8 +359,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -373,8 +381,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -382,8 +391,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -401,8 +411,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -410,8 +421,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -429,8 +441,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -438,8 +451,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -457,8 +471,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -466,8 +481,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
