--- a/projects.html
+++ b/projects.html
@@ -214,23 +214,12 @@
             PT Ansaf<br>
             Inti Resources
           </h3>
-          <p class="text-white d-none d-lg-block">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang<br>
-            pertambangan yang beroperasi di provinsi Kalimantan Timur. Perusahaan<br>
-            yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang<br>
-            bergerak di coal trading company. Pada tahun 2014 PT Ansaf Inti Resources<br>
+          <p class="text-white brief">
+            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang
+            pertambangan yang beroperasi di provinsi Kalimantan Timur. Perusahaan
+            yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang
+            bergerak di coal trading company. Pada tahun 2014 PT Ansaf Inti Resources
             memulai usaha lain sebagai perusahaan jasa pertambangan.
-          </p>
-          <p class="text-white d-lg-none">
-            PT Ansaf Inti Resources (AIR) merupakan<br>
-            perusahaan yang bergerak dibidang<br>
-            pertambangan yang beroperasi di provinsi<br>
-            Kalimantan Timur. Perusahaan yang berdiri<br>
-            pada 22 juli 2011 memulai usahanya sebagai<br>
-            perusahaan yang bergerak di coal trading<br>
-            company. Pada tahun 2014 PT Ansaf Inti<br>
-            Resources memulai usaha lain sebagai<br>
-            perusahaan jasa pertambangan.
           </p>
         </div>
         <div class="col-lg-5 pr-lg-0 order-lg-2 order-1 px-0">
@@ -251,9 +240,9 @@
               <h3 class="text-white">
                 Solution through partnership
               </h3>
-              <p class="text-white my-lg-5 mt-3 mb-5">
-                PT Ansaf Inti Resources (AIR) berkomitmen untuk memberikan solusi dan<br>
-                memiliki kolaborasi jangka panjang dengan klien. Kemampuan dan komitmen<br>
+              <p class="text-white my-lg-5 mt-3 mb-5 brief">
+                PT Ansaf Inti Resources (AIR) berkomitmen untuk memberikan solusi dan
+                memiliki kolaborasi jangka panjang dengan klien. Kemampuan dan komitmen
                 ini terus kami pegang dalam setiap proyek kami.
               </p>
               <a class="button-link text-white d-none d-lg-inline" href="prev-projects.html">
