--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -346,8 +346,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -355,8 +356,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -374,8 +376,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -383,8 +386,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -402,8 +406,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -411,8 +416,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -430,8 +436,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -439,8 +446,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -460,8 +468,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -469,8 +478,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -488,8 +498,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -497,8 +508,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -516,8 +528,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -525,8 +538,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -544,8 +558,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -553,8 +568,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
