--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@
       </div>
     </div>
     <div class="container section-forms-ansaf">
-      <div class="row my-lg-5">
+      <div class="row mt-lg-5">
         <div class="col-lg-6">
             <div class="form-group left-forms">
               <label class="font-roboto text-gray">NAMA :</label>
@@ -257,7 +257,7 @@
             <label class="font-roboto text-gray">PESAN :</label>
             <textarea class="form-control input-gray" rows="7"></textarea>
           </div>
-          <a href="#" class="link-blue-border d-block py-2 my-lg-0 my-5 text-center">
+          <a href="#" class="link-blue-border d-block py-2 my-lg-0 my-5 text-center button-form">
             KIRIM PESAN
           </a>
       </div>
