--- a/csr.html
+++ b/csr.html
@@ -213,11 +213,11 @@
                 <h2 class="text-white mb-lg-4">
                   Tulisan Pembuka
                 </h2>
-                <p class="text-white">
-                  Tanggung Jawab Sosial Perusahaan bukan hanya sekedar<br>
-                  kewajiban. Bagi kami, tanggung jawab sosial melekat dengan<br>
-                  operasi kami di manapun. Ibarat 2 sisi uang logam. Penerapan<br>
-                  tanggung jawab sosial perusahaan yang kami lakukan dimulai<br>
+                <p class="text-white brief">
+                  Tanggung Jawab Sosial Perusahaan bukan hanya sekedar
+                  kewajiban. Bagi kami, tanggung jawab sosial melekat dengan
+                  operasi kami di manapun. Ibarat 2 sisi uang logam. Penerapan
+                  tanggung jawab sosial perusahaan yang kami lakukan dimulai
                   dari hulu melalui peran serta karyawan.
                 </p>
             </div>
