--- a/existing-projects.html
+++ b/existing-projects.html
@@ -260,8 +260,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -269,8 +270,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -288,8 +290,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -297,8 +300,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -316,8 +320,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -325,8 +330,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -344,8 +350,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -353,8 +360,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -374,8 +382,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -383,8 +392,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -402,8 +412,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -411,8 +422,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -430,8 +442,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -439,8 +452,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
@@ -458,8 +472,9 @@
                 <div class="col-lg-4">
                   Lokasi
                 </div>
-                <div class="col-lg-6">
-                   : Perangat, Kutai Kartanegara,<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                    Perangat, Kutai Kartanegara,<br> 
 			              East Kalimantan
                 </div>
               </div>
@@ -467,8 +482,9 @@
                 <div class="col-lg-4">
                   Lingkup Pekerjaan
                 </div>
-                <div class="col-lg-6">
-                  : Pertambangan Batubara -<br> 
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara -<br> 
                   Peningkatan Jalan <br>
                   Pengangkutan Batubara<br>
                 </div>
